# Informatika_Labs_MIFI

1Sem/: 1.1.1.c  1.1.2.c  1.2.1.c  1.2.2.c  1.3.1.c  1.3.2.c  1.4.1.c  2.10.1.c  2.10.2.c  2.11.1.c  2.11.2.c  2.5.1.c  2.5.2.c  2.6.c  2.7.c  2.8.c  2.9.c  3.12.c  3.13.c
2Sem/LW_2sem-1/: My_String.c  tests.c
3Sem/LW_3sem-1/: CMakeLists.txt  Main.cpp  ShrdPtr.cpp  ShrdPtr.h  SmartDynamicArray.h  SmartPointers.h  UnqPtr.cpp  UnqPtr.h  test.cpp
3Sem/LW_3sem-1/Scripts/: RunTests.sh
3Sem/LW_3sem-1/Source/: .cpp  CMakeLists.txt  DynamicArray.hpp  LinkedList.hpp  ShrdPtr.cpp  ShrdPtr.h  ShrdPtr.hpp  SmartDynamicArray.h  SmartDynamicArray.hpp  SmartLinkedList.hpp  UnqPtr.cpp  UnqPtr.h  UnqPtr.hpp
3Sem/LW_3sem-1/Tests/: CMakeLists.txt  DynamicArrayTests.cpp  LinkedListTests.cpp  MainTests.cpp  ShrdPtrTests.cpp  Tests.cpp  UnqPtrTests.cpp
3Sem/LW_3sem-2/: CMakeLists.txt  Main.cpp
3Sem/LW_3sem-2/Scripts/: RunMain.sh  TestsAndCoverage.sh
3Sem/LW_3sem-2/Source/: BubbleSorter.hpp  CMakeLists.txt  ISorter.hpp  Person.hpp  QuickSorter.hpp  SelectionSorter.hpp  ShellSorter.hpp
3Sem/LW_3sem-2/Tests/: MainTests.cpp  TEST1000.txt
3Sem/LW_3sem-3/: CMakeLists.txt  main.cpp
3Sem/LW_3sem-3/Scripts/: RunTests.sh
3Sem/LW_3sem-3/Source/: BalancedTree.hpp  Dictionary.hpp  Histogram.hpp  UI.cpp  Worker.hpp
3Sem/LW_3sem-3/Tests/: DictionaryTests.cpp  MainTests.cpp
3Sem/LW_3sem-4/: CMakeLists.txt  main.cpp
3Sem/LW_3sem-4/Scripts/: RunMain.sh  (+2 more)
4Sem/LW_4sem-2/: CMakeLists.txt  main.c
4Sem/LW_4sem-3/: CMakeLists.txt  main.c
4Sem/LW_4sem-4/: CMakeLists.txt  main.c
(+17 files in other folders)
